# foxhole-production-calculator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
calculator/: Cargo.toml  build.rs
calculator/src/: lib.rs  main.rs
calculator/structures/: ammunition_factory.toml  coal_refinery.toml  materials_factory.toml  metalworks_factory.toml  oil_refinery.toml  structure_a.toml  structure_b.toml
foxhole-production-calculator/: Cargo.toml  README.md  build.rs
foxhole-production-calculator-cli/: Cargo.toml  README.md
foxhole-production-calculator-cli/src/: main.rs
foxhole-production-calculator-frontend/: .main.rs.swp  Cargo.toml  index.html
foxhole-production-calculator-frontend/src/: components.rs  main.rs
foxhole-production-calculator-frontend/src/components/: cost_display.rs  custom_inputs.rs  input_display.rs  resource_selector.rs  structure_display.rs  structure_tree.rs
foxhole-production-calculator-types/: Cargo.toml  README.md
foxhole-production-calculator-types/src/: lib.rs
foxhole-production-calculator/src/: lib.rs
foxhole-production-calculator/structures/: ammunition_factory.toml  coal_refinery.toml  materials_factory.toml  metalworks_factory.toml  oil_refinery.toml
types/: Cargo.toml
types/src/: lib.rs
