[package]
name = "foxhole-production-calculator-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxhole-production-calculator = { path = "../foxhole-production-calculator", version = "0.1" }
clap = { version = "3.2", features = ["derive"] }
types = { path="../types", version = "0.1" }
