[package]
name = "foxhole-production-calculator-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "API to calculate buildings and resources needed for building production facilities."
repository = "https://github.com/bahildebrand/foxhole-production-calculator/tree/master/foxhole-production-calculator-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxhole-production-calculator = { path = "../foxhole-production-calculator", version = "0.1" }
clap = { version = "3.2", features = ["derive"] }
foxhole-production-calculator-types = { path="../foxhole-production-calculator-types", version = "0.1" }
serde_json = "1.0"
