[package]
name = "foxhole-production-calculator-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
foxhole-production-calculator = { path = "../foxhole-production-calculator", version = "0.2.0" }
foxhole-production-calculator-types = { path="../foxhole-production-calculator-types", version = "0.2.0" }
itertools = "0.10"
log = "0.4"
strum = { version = "0.24", features = ["derive"] }
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlButtonElement"] }
yew = "0.19"
