[package]
name = "foxhole-production-calculator-types"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Types needed for the foxhole production calculator."
repository = "https://github.com/bahildebrand/foxhole-production-calculator/tree/master/foxhole-production-calculator-types"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
genco = "0.17"
serde = { version = "1.0", features = ["derive"] }
