[package]
name = "foxhole-production-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.1" }

[build-dependencies]
toml = "0.5"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.1" }