[package]
name = "foxhole-production-calculator"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "API to calculate buildings and resources needed for building production facilities."
repository = "https://github.com/bahildebrand/foxhole-production-calculator/tree/master/foxhole-production-calculator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.1" }

[build-dependencies]
toml = "0.5"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.1" }
genco = "0.17"
