[package]
name = "foxhole-production-calculator"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "API to calculate buildings and resources needed for building production facilities."
repository = "https://github.com/bahildebrand/foxhole-production-calculator/tree/master/foxhole-production-calculator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.5"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
toml = "0.5"
foxhole-production-calculator-types = { path = "../foxhole-production-calculator-types", version = "0.2.0" }
genco = "0.17"